[package]
name = "tutorial1-window"
version = "0.1.0"
authors = ["andrew kraevskii"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial1-window"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14.0", features = ["derive"] }

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]
